# playwright-mcp-proxy

./: .current-work.md  .env.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  INSTALL.md  LICENSE  Makefile  PHASE7_DESIGN.md  PHASE7_STATUS.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  main.py  pyproject.toml
.claude/skills/playwright-proxy/: SKILL.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/milestones/v1.0-phases/02-bug-fixes/: 02-01-PLAN.md
.planning/phases/01-dependency-hygiene/: 01-01-PLAN.md  01-01-SUMMARY.md  01-RESEARCH.md
.planning/phases/02-bug-fixes/: 02-01-SUMMARY.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-transaction-batching/: 03-01-SUMMARY.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-evaluate-consolidation-security/: 04-01-SUMMARY.md  04-RESEARCH.md  04-VALIDATION.md
.planning/phases/05-cli-management-tool-playwright-proxy-ctl/: 05-RESEARCH.md  05-VALIDATION.md  05-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
examples/: debug_playwright_response.py  test_bug_fix.py  test_click_error.py  test_context_lines.py  test_diff.py  test_server.py  test_user_scenario.py
playwright_mcp_proxy/: __init__.py  config.py
playwright_mcp_proxy/client/: __init__.py  mcp_server.py
playwright_mcp_proxy/ctl/: __init__.py  commands.py
playwright_mcp_proxy/database/: __init__.py  operations.py  schema.py
playwright_mcp_proxy/models/: __init__.py  api.py  database.py
playwright_mcp_proxy/server/: __init__.py  app.py  playwright_manager.py  session_state.py
tests/: __init__.py  chrome_measurements.json  test_bugs.py  test_chrome_comparison.py  test_comparison.py  test_ctl.py  test_database.py  test_diff.py  test_integration_live.py  test_phase7_schema.py  test_phase7_startup_detection.py  test_phase7_state_capture.py  test_sleep_recovery.py  test_transaction_batching.py
(+28 files in other folders)
