[project]
name = "playwright-mcp-proxy"
version = "0.2.4"
description = "MCP proxy for Playwright with persistent storage, session management, and diff-based content retrieval"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.119.0",
    "uvicorn>=0.34.0",
    "aiosqlite>=0.21.0",
    "mcp>=1.15.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.0.0",
    "psutil>=6.1.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
]

[project.scripts]
playwright-proxy-server = "playwright_mcp_proxy.server:main"
playwright-proxy-client = "playwright_mcp_proxy.client:main"
playwright-proxy-ctl = "playwright_mcp_proxy.ctl:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
